			     BZFlag Release Notes
			     ====================

BZFlag 1.12.0  (was 1.11.x)
---------------------------

* Fixed dropping flag while jumping from high places - Alfredo Tupone
* Sorting Lag Stats by Lag Value - Alfredo Tupone
* openGL context reloading bug fixed on SDL - Alfredo Tupone
* Roaming switch between player is now consistent - Alfredo Tupone
* Compensating jitter in Dead reckoning - Alfredo Tupone
* Ping packet loss are like high lag for warn/kick - Alfredo Tupone
* ColorBlindness now disable hunt flashing on radar - Alfredo Tupone
* Building static with SDL is ok - Alfredo Tupone
* SDL is the default way of building - Alfredo Tupone
* Fixing stuck on flipped pyramids - Alfredo Tupone
* Compressed map data going over the network and into caches - Dave Rodgers
* Options to disable certain /poll's entirely on a server - Simon Richard Grint
* Lighting menu option now has "None / Fast / Best" - Dave Rodgers
* Dev-C++ project files - Ian Agar, Daniel Remenak, Jeff Myers
* Shot accuracy statistics dialog - Daniel Remenak
* Faster zbuffer graphics using octree and dynamic occluders - Dave Rodgers
* Faster startup times by making the SceneDatabase on the fly - Dave Rodgers
* Faster collision detection using a precalculated  grid - Dave Rodgers
* Auto-completion for the first few given letters of a callsign - Ian Agar
* /clientquery can now be requested on single individuals - Ian Agar
* Added support for irc-like /me actions and /msg messages - Sean Morrison
* Seer flag now can see Invisible Bullets - Dave Rodgers
* Added admin message sounds - Cameron Mandrake, Sean Morrison
* Better shot reflections for non-square pyramids - Dave Rodgers
* Fixed collision detection impalement problem - Dave Rodgers
* Added anti perm for pollkick, pollban, kick, ban, deregister - Sean Morrison
* Added antipoll bzfs anti perm to protect against poll kick/bans - Andrew Heyn
* Server Start Menu now allows selection between Rabbit Chase styles - Ian Agar